force-app/main/default/objects/Product__c/validationRules/ArchivedOnlyActiveProduct.validationRule-meta.xml
<ValidationRule>
    <fullName>ArchivedOnlyActiveProduct</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Archived&quot;) &amp;&amp;
BEGINS(TEXT(PRIORVALUE(Status__c)), &quot;Draft&quot;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Product must be active before archived</errorMessage>
</ValidationRule>