force-app/main/default/objects/Product__c/validationRules/IfApprovalStatusIsAcceptedStatusDoNotBeA.validationRule-meta.xml
<ValidationRule>
    <fullName>IfApprovalStatusIsAcceptedStatusDoNotBeA</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Active&quot;) &amp;&amp;
BEGINS(TEXT(PRIORVALUE(ApprovalStatus__c)), &quot;Accepted&quot;)</errorConditionFormula>
    <errorMessage>If Approval Sttus is &quot;Accepted&quot;, Status do not be &quot;Active&quot;</errorMessage>
</ValidationRule>