force-app/main/default/objects/Product__c/validationRules/ValueOfPriceBiggerThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>ValueOfPriceBiggerThanZero</fullName>
    <active>true</active>
    <errorConditionFormula>Price__c &gt;0</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Value of Price have to bigger than 0</errorMessage>
</ValidationRule>