force-app/main/default/objects/Product__c/listViews/Active_Status.listView-meta.xml
<ListView>
    <fullName>Active_Status</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Status</label>
</ListView>