force-app/main/default/objects/Product__c/listViews/Archived_Status.listView-meta.xml
<ListView>
    <fullName>Archived_Status</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Archived</value>
    </filters>
    <label>Archived Status</label>
</ListView>