force-app/main/default/objects/Product__c/listViews/Draft_Status.listView-meta.xml
<ListView>
    <fullName>Draft_Status</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>Draft Status</label>
</ListView>